// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders the UI snapshot correctly 1`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="standard"
  id="notificationID1"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgAlertNotificationImportant"
        focusable={false}
        id="notificationID1-notification-icon"
        role="img"
        title="Notification standard icon"
      />
      <h4
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="notificationID1-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 2`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="announcement"
  id="notificationID2"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-f7lbg8"
        data-file-name="SvgSpeakerNotes"
        focusable={false}
        id="notificationID2-notification-icon"
        role="img"
        title="Notification announcement icon"
      />
      <h4
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="notificationID2-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 3`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="warning"
  id="notificationID3"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-3u73el"
        data-file-name="SvgErrorFilled"
        focusable={false}
        id="notificationID3-notification-icon"
        role="img"
        title="Notification warning icon"
      />
      <h4
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="notificationID3-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 4`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="standard"
  id="notificationID4"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgAlertNotificationImportant"
        focusable={false}
        id="notificationID4-notification-icon"
        role="img"
        title="Notification standard icon"
      />
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 5`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="standard"
  id="notificationID5"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <h4
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="notificationID5-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 6`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="standard"
  id="notificationID6"
>
  <div
    className="css-0"
  >
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 7`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-notification"
  data-type="standard"
  id="notificationID7"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgAlertNotificationImportant"
        focusable={false}
        id="notificationID7-notification-icon"
        role="img"
        title="Notification standard icon"
      />
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
  <button
    aria-label="Close the notification"
    className="chakra-button css-1xdhyk6"
    data-testid="ds-button"
    id="notificationID7-notification-dismissible-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="chakra-icon css-vj9769"
      data-file-name="SvgClose"
      focusable={false}
      id="notificationID7-dismissible-icon"
      role="img"
      title="Notification close icon"
    />
  </button>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 8`] = `
<aside
  className="css-kle7zy"
  data-testid="ds-notification"
  data-type="standard"
  id="chakra"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgAlertNotificationImportant"
        focusable={false}
        id="chakra-notification-icon"
        role="img"
        title="Notification standard icon"
      />
      <h4
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="chakra-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 9`] = `
<aside
  className="css-1xdhyk6"
  data-testid="props"
  data-type="standard"
  id="props"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
      data-testid="ds-notificationHeading"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgAlertNotificationImportant"
        focusable={false}
        id="props-notification-icon"
        role="img"
        title="Notification standard icon"
      />
      <h4
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="props-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
      data-testid="ds-notificationContent"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;
